--- a/Python/oops.ipynb
+++ b/Python/oops.ipynb
@@ -562,9 +562,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a52536db-ba9d-4726-b976-09f32f36f98b",
+   "metadata": {},
+   "source": [
+    "### getters and setters\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1d299315-67cb-4217-9f1d-688860ff65c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "srikanth maganti\n",
+      "srikanthmaganti@gmail.com\n",
+      "sravan kumar\n",
+      "sravankumar@gmail.com\n",
+      "deleted\n",
+      "None None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class employee:\n",
+    "    def __init__(self,first,last,pay):\n",
+    "        self.first=first\n",
+    "        self.last=last\n",
+    "        self.pay=pay\n",
+    "\n",
+    "    #getters\n",
+    "    @property\n",
+    "    def email(self):\n",
+    "        return \"{}{}@gmail.com\".format(self.first,self.last)\n",
+    "    @property\n",
+    "    def fullname(self):\n",
+    "        return \"{} {}\".format(self.first,self.last);\n",
+    "\n",
+    "    #setters\n",
+    "    @fullname.setter\n",
+    "    def fullname(self,name):\n",
+    "        first,last=name.split(' ')\n",
+    "        self.first=first\n",
+    "        self.last=last\n",
+    "\n",
+    "\n",
+    "    #deleters\n",
+    "    @fullname.deleter\n",
+    "    def fullname(self):\n",
+    "        print(\"deleted\")\n",
+    "        self.first=None\n",
+    "        self.last=None\n",
+    "        \n",
+    "    \n",
+    "emp1=employee(\"srikanth\",\"maganti\",123)\n",
+    "print(emp1.fullname)\n",
+    "print(emp1.email)\n",
+    "\n",
+    "emp1.fullname=\"sravan kumar\"\n",
+    "print(emp1.fullname)\n",
+    "print(emp1.email)\n",
+    "\n",
+    "del emp1.fullname\n",
+    "print(emp1.fullname)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20bd7251-c5b2-4c5b-9dee-8bb040798efb",
+   "id": "1460c8ea-2f7c-4ed0-98e7-0228c7c9469f",
    "metadata": {},
    "outputs": [],
    "source": []
