--- a/webscraping/scrape_quotes.ipynb
+++ b/webscraping/scrape_quotes.ipynb
@@ -2,11 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d7eac41f-4f33-4506-8414-72667072a6f4",
+   "execution_count": 1,
+   "id": "906214e0-8948-4cdd-97ca-30ad828acd4f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import requests\n",
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a66935c-b517-4dd5-95c9-eae85b46f658",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url=\"https://quotes.toscrape.com/\"\n",
+    "file=requests(url).text\n",
+    "\n",
+    "soup=BeautifulSoup(file,\"lxml\")\n",
+    "print(soup)"
+   ]
   }
  ],
  "metadata": {
