adding new files

--- a/Python/datetime_module.ipynb
+++ b/Python/datetime_module.ipynb
@@ -1291,7 +1291,10 @@
    "id": "cc78f965-4e6a-464e-bd6b-6e55e4995e63",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "l=datetime.datetime.now()\n",
+    "l.strftime(\"%a,%d %b %Y %H:%M:%S\")"
+   ]
   }
  ],
  "metadata": {
