--- a/Python/oops.ipynb
+++ b/Python/oops.ipynb
@@ -88,7 +88,7 @@
     "emp_1.fullname()\n",
     "emp_2.fullname()\n",
     "\n",
-    "\n",
+    "#we can access class varible from class and instance but we cant access instance varible from class\n",
     "employee.fullname(emp_1)#if we are calling a method by using a class we must expllicitely pass instance\n",
     "\n",
     "\n"
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1acc173a-baa6-46cf-91a5-3d6de651cb44",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sriknath\n"
+      "anonymous\n"
      ]
     }
    ],
@@ -166,7 +166,8 @@
     "class student:\n",
     "    name=\"anonymous\"\n",
     "    def __init__(self,name):\n",
-    "        self.name=name\n",
+    "        # self.name=name\n",
+    "        pass\n",
     "s1=student(\"sriknath\")\n",
     "print(s1.name)"
    ]
@@ -204,6 +205,7 @@
    "source": [
     "\n",
     "#class methods by default take class as a argument\n",
+    "#class methods for dealing with class variables\n",
     "class employee:\n",
     "    raise_amount=1.04\n",
     "    count=0\n",
@@ -217,7 +219,7 @@
     "    @classmethod\n",
     "    def set_raise_amount(cls,amount):\n",
     "        cls.raise_amount=amount\n",
-    "        \n",
+    "#class method can be call by object or class      \n",
     "emp1=employee(\"srikanth\",\"maganti\",200000)\n",
     "emp2=employee(\"sravan\",\"kumar\",200000)\n",
     "emp1.show()\n",
@@ -392,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "a71c0d3f-2e17-48db-a9cf-89f2ba9efc8e",
    "metadata": {},
    "outputs": [
@@ -401,7 +403,11 @@
      "output_type": "stream",
      "text": [
       "srikanth\n",
-      "python\n"
+      "python\n",
+      "12000\n",
+      "12480\n",
+      "1.04\n",
+      "1.06\n"
      ]
     }
    ],
@@ -431,9 +437,11 @@
     "print(dev1.prog_lan)\n",
     "\n",
     "\n",
-    "#print(emp1.pay)\n",
-    "#emp1.apply_raise()\n",
-    "#print(emp1.pay)"
+    "print(emp1.pay)\n",
+    "emp1.apply_raise()\n",
+    "print(emp1.pay)\n",
+    "print(emp1.raise_amount)\n",
+    "print(dev1.raise_amount)"
    ]
   },
   {
