--- a/Python/os_module.ipynb
+++ b/Python/os_module.ipynb
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.rmdir(\"hi/joe\") #deletes joe directory but not joe"
+    "os.rmdir(\"hi/joe\") #deletes joe directory but not hi"
    ]
   },
   {
