--- a/scipy.ipynb
+++ b/scipy.ipynb
@@ -345,9 +345,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd3d0620-5982-47e8-91a4-7aad4e45403c",
+   "metadata": {},
+   "source": [
+    "## exponential distribution\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f6c7450b-a392-49eb-a7a6-edd4a653773d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exponential distribution used for modelling time to failure of electronic devices"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6efb996-0537-4cde-90ae-c0092705a394",
+   "id": "c188269a-da30-4ea4-a40a-b6880f142cfa",
    "metadata": {},
    "outputs": [],
    "source": []
